<resources>
    <string name="app_name">ImageWorld</string>

    <!-- SPLASH -->
    <string name="splash_screen_title">Image World</string>

    <!-- LOGIN -->
    <string name="login_title">Image World</string>
    <string name="login_id">ID</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">SIGN IN</string>
    <string name="login_sign_in_with_google">Sign In with Google</string>
    <string name="login_register">Don\'t Have ID? Register Here</string>

    <!-- REGISTER -->
    <string name="register_title">Image World</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_btn_register">REGISTER</string>
    <string name="register_btn_login">Already have ID? Login here</string>

    <!-- DASHBOARD -->
    <string name="dashboard_nav_home">Home</string>
    <string name="dashboard_nav_capture">Post</string>
    <string name="dashboard_nav_profile">Profile</string>
    <string name="dashboard_title">ImageWorld</string>
    <string name="dashboard_dialog_exit_message">Exit from App?</string>
    <string name="dashboard_dialog_exit_positive">Yes</string>
    <string name="dashboard_dialog_exit_negative">No</string>
    <string name="post_seen_by_title">seen by -</string>

    <!-- USER PROFILE -->
    <string name="profile_menu_update">update</string>
    <string name="profile_menu_settings">settings</string>
    <string name="profile_menu_logout">logout</string>
    <string name="profile_menu_dialog_exit_message">Are you sure to logout?</string>
    <string name="profile_menu_dialog_exit_positive">Yes</string>
    <string name="profile_menu_dialog_exit_negative">No</string>
    <string name="profile_placeholder">You don\'t have any posts yet. Let\'s make a post now</string>

    <!-- EDIT PROFILE -->
    <string name="edit_profile_change_photo">Change Photo</string>
    <string name="edit_profile_first_name">First Name</string>
    <string name="edit_profile_last_name">Last Name</string>
    <string name="edit_profile_username">Username</string>
    <string name="edit_profile_bio">Bio</string>
    <string name="edit_profile_save">SAVE</string>

    <!-- ADD POST -->
    <string name="add_post_change_photo">Change Photo</string>
    <string name="add_post_caption">Caption</string>
    <string name="add_post_save">SAVE</string>

    <!-- HOME -->
    <string name="home_placeholder">There is no post yet</string>

    <!-- POST -->
    <string name="post_comment">comment</string>
    <string name="comment_add_a_comment">Add a comment ..</string>
    <string name="comment_post">Post</string>

</resources>
