<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/nav_home"
        android:title="@string/dashboard_nav_home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_camera"
        android:enabled="true"
        android:icon="@drawable/nav_camera"
        android:title="@string/dashboard_nav_capture"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:icon="@drawable/nav_profile"
        android:title="@string/dashboard_nav_profile"
        app:showAsAction="ifRoom"/>
</menu>