<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.register.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/registerTxtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_title"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="textEnd"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>

                <ImageView
                    android:id="@+id/registerImgLogo"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/logo_camera"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/registerTxtTitle"
                    android:layout_marginEnd="10dp"
                    tools:ignore="ContentDescription"/>

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/registerEtFirstNameLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:theme="@style/MyTextInputLayoutStyle"
                android:hint="@string/register_first_name"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registerEtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:paddingBottom="20dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/registerEtLastNameLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:theme="@style/MyTextInputLayoutStyle"
                android:hint="@string/register_last_name"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registerEtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:paddingBottom="20dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/registerEtUsernameLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:theme="@style/MyTextInputLayoutStyle"
                android:hint="@string/register_username"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registerEtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:paddingBottom="20dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/registerEtEmailLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:theme="@style/MyTextInputLayoutStyle"
                android:hint="@string/register_email"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registerEtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="20dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/registerEtPasswordLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:theme="@style/MyTextInputLayoutStyle"
                android:hint="@string/register_password"
                android:textColorHint="@color/colorPrimary"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimaryDark"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registerEtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="textPassword"
                    android:paddingBottom="20dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/registerEtConfirmPasswordLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:theme="@style/MyTextInputLayoutStyle"
                android:hint="@string/register_confirm_password"
                android:textColorHint="@color/colorPrimary"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimaryDark"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/registerEtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="textPassword"
                    android:paddingBottom="20dp"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/registerBtnRegister"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:theme="@style/PrimaryButton"
                android:text="@string/register_btn_register"
                android:textSize="16sp"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/registerBtnLogin"
                android:layout_width="300dp"
                android:layout_height="50dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/register_btn_login"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="false"
                app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/registerProgressBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/colorBgProgressBar"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:theme="@style/CircularProgressPrimary"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>