<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.editProfile.EditProfileActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/editProfileToolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@android:color/white"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitleTextColor="@color/colorPrimaryDark"
            app:titleTextColor="@color/colorPrimaryDark"
            android:elevation="3dp"
            android:layout_alignParentTop="true"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/editProfileToolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/editProfileImg"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/ic_img_profile_default"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"/>

                <TextView
                    android:id="@+id/editProfileTxtChangePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile_change_photo"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:focusable="true"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/editProfileEtFirstNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyTextInputLayoutStyle"
                    android:hint="@string/edit_profile_first_name"
                    android:textColorHint="@color/colorPrimary"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editProfileEtFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:inputType="textPersonName"
                        android:paddingBottom="20dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/editProfileEtLastNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyTextInputLayoutStyle"
                    android:hint="@string/edit_profile_last_name"
                    android:textColorHint="@color/colorPrimary"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editProfileEtLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:inputType="textPersonName"
                        android:paddingBottom="20dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/editProfileEtUsernameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyTextInputLayoutStyle"
                    android:hint="@string/edit_profile_username"
                    android:textColorHint="@color/colorPrimary"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editProfileEtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:inputType="text"
                        android:paddingBottom="20dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/editProfileEtBioLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyTextInputLayoutStyle"
                    android:hint="@string/edit_profile_bio"
                    android:textColorHint="@color/colorPrimary"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editProfileEtBio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:inputType="textMultiLine"
                        android:paddingBottom="20dp"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </ScrollView>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/editProfileProgressBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/colorBgProgressBar"
        android:visibility="gone"
        android:layout_below="@id/editProfileToolbar">

        <ProgressBar
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:theme="@style/CircularProgressPrimary"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>